--- a/MyNewPage.html
+++ b/MyNewPage.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+body {background-color: powderblue;}
+h1   {color: blue;}
+p    {color: red;}
+</style>
 <title>Page Title</title>
 </head>
-<body>
+<body bgcolor="blue">
 
 <h1>One good tip to be successful in college</h1>
 <p>One good tip that will lead you to good success in college is to set a goal for yourself for the end of the semester. This is for you to try and meet that goal while working throughout the semester and this will give you a reason to actually work hard so you can meet this goal. This tip helped me by setting a standard to work toward and giving myself something to achieve at the end of the semester.
